Text overflow issue fix in todo-description

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -425,6 +425,9 @@ img {
 
     display: flex;
     flex-direction: column;
+
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 .done > .title-desc, .done > .date-time {
@@ -494,16 +497,12 @@ img {
     font-size: 12px;
     color: gray;
 
-    text-overflow: ellipsis;
-
-    overflow: hidden;
-    white-space: nowrap;
-
     font-weight: 300;
 
-    /* padding-right: 25px; */
-
-    max-width: 200px;
+    text-overflow: ellipsis;
+    
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 .date-time {
